-Commented out announcements-wrapper 'break-all' css -> was breaking in the middle of words. Horizontal scroll bar shouldn't be an issue in practice because it will only appear on huge continuous strings of characters, whereas real sentences have spaces so the issue shouldn't ever be triggered (even if it is, everything is still functional). -Added padding below 'Course Stats' button (announcements box was touching it when screen was horizontally narrow)

--- a/resources/CSS/global.css
+++ b/resources/CSS/global.css
@@ -241,7 +241,7 @@ a:hover
 
     .table-scrollOnOverflow-sm {overflow-y:auto;}
 }
-#announcements-wrapper td {word-break: break-all;}
+/*#announcements-wrapper td {word-break: break-all;} !*CORRECTS HORIZONTAL SCROLLBAR FOR A LONG STRING OF CONTINUOUS CHARACTERS, BUT BREAKS IN WORDS*!*/
 
 .bgColor-grey-1 {background-color:#eee;}
 
